--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,9 +8,46 @@ div.navbar-header img {
     margin-right: 7px;
 }
 
-div.navbar-text {
+/* 
+can't figure out how to change color of navbar text?!
+*/
+/*.navbar-right {
   color: SteelBlue;
+}*/
+
+/* styling for primary buttons */
+.btn-primary {
+  background-color: #007C7D;
 }
+
+.btn-primary:hover{
+    background: Red;
+}
+
+/* Extra markup and styles for table-esque vertical and horizontal centering */
+.site-wrapper {
+
+  display: table;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+}
+.site-wrapper-inner {
+
+  display: table-cell;
+  vertical-align: top;
+}
+.cover-container {
+  background-color: Green;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* Padding for spacing */
+.inner {
+  padding: 30px;
+}
+ 
 
 /*li.warning {
     color: red;
