--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/static/css/cover.css">
         <title>surf journal: Clever Title TBD</title>
         <style>
@@ -28,24 +28,18 @@
           <div class="inner cover">
               <img src="/static/img/temp_logo.jpg">
               <h1 class="cover-heading">Ocean Riders' Journal</h1>
-            <p class="lead">placeholder surfer ipsum flotsam jetsam placeholder
-            <p class="lead">
-            <a href="/about" class="btn btn-lg btn-default">What Do I Do?!</a>
-            </p>
+              <p class="lead">placeholder surfer ipsum flotsam jetsam placeholder
+              <p class="lead">
+              <a href="/about" class="btn btn-lg btn-default">What Do I Do?!</a>
+              </p>
+              {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                  {% for message in messages %}
+                    <h3 class="flashes">{{message}}</li></h3>
+                  {% endfor %}
+                {% endif %}
+              {% endwith %}
           </div>
-
-        <div class="container">
-            {% with messages = get_flashed_messages() %}
-            {% if messages %}
-            {% for message in messages %}
-            <ul class="flashes">
-                <li>{{message}}</li>
-            </ul>
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
-
-        </div>
 
           <div class="mastfoot">
             <div class="inner">
