--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/static/css/cover.css">
-        <title>surf journal: Clever Title TBD</title>
+        <title>Ocean Riders' Journal</title>
         <style>
             body {
                 background-image: url("/static/img/temp_waves.jpg");
