more code cleanup, comments and docstrings in model and api files. removed notes from remaining templates.

--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -35,6 +35,7 @@
 <br>
 <br>
 
+<!-- credit to the API -->
 <div class = "msw">
     <a href="http://magicseaweed.com"><img src="http://im-1-uk.msw.ms/msw_powered_by.png"></a>
     <br>
