--- a/templates/about.html
+++ b/templates/about.html
@@ -1,15 +1,52 @@
-{% extends 'giantList_features.html' %}
+{% extends 'base.html' %}
 {% block body %}
 
 <h2>TO DO:<br>
-clean up the giant list and turn this into an "about" page 
+rewrite list to turn into an "about" page 
 </h2>
 
+<div>
+	<h3>Make a journal report for today's session:</h3>
+	<br>
+	(Date/ time automatically generated at time of entry)
+	
+	<div>
+		<h4>User-supplied inputs:</h4>
+		<ul>
+			<br>
+			Location
+			<li>choose from list of northern and central ca beaches</li>
+			<li>add spot notes: specific part of beach or other beach near existing option</li>
+			<br>
+			Board used:
+			<li>Choose from (or add board to) stored quiver</li>
+			<li>rate whether board was right size for the conditions</li>
+			<li>optional notes about board</li>
+			<br>
+			Subjective User Ratings:
+			<li>Crowd density</li>
+			<li>Crowd vibe</li>
+			<li>Challenge level of waves</li>
+			<li>Fun level of waves</li>
+			<li>Fun level of session overall</li>
+			<br>
+			Additional (optional) User input:
+			<li>Who you surfed with, if anyone</li>
+			<li>general notes on the session</li>
+			<br>
+		</ul>
+	</div>
 
+	<div></div>
+		<h4>API-generated data based on date, time, and location of entry</h4>
+		<ul>
+			<li>Swell height </li>
+			<li>Swell period </li>
+			<li>Swell direction </li>
+			<li>Wind speed</li>
+			<li>Wind direction</li>
+		</ul>
+	</div>
+</div>
 
-<li></li>
-<li></li>
-<li></li>
 {% endblock %}
-<!--     <li><a href="{{url_for("view_movie", id=rating.movie_id)}}">{{rating.movie.title}} &mdash; {{rating.rating}}</a></li>
- --> 
