--- a/templates/about.html
+++ b/templates/about.html
@@ -14,23 +14,23 @@ rewrite list to turn into an "about" page
 		<h4>User-supplied inputs:</h4>
 		<ul>
 			<br>
-			Location
+			<h4>Location</h4>
 			<li>choose from list of northern and central ca beaches</li>
 			<li>add spot notes: specific part of beach or other beach near existing option</li>
 			<br>
-			Board used:
+			<h4>Board used:</h4>
 			<li>Choose from (or add board to) stored quiver</li>
 			<li>rate whether board was right size for the conditions</li>
 			<li>optional notes about board</li>
 			<br>
-			Subjective User Ratings:
+			<h4>Subjective User Ratings:</h4>
 			<li>Crowd density</li>
 			<li>Crowd vibe</li>
 			<li>Challenge level of waves</li>
 			<li>Fun level of waves</li>
 			<li>Fun level of session overall</li>
 			<br>
-			Additional (optional) User input:
+			<h4>Additional (optional) User input:</h4>
 			<li>Who you surfed with, if anyone</li>
 			<li>general notes on the session</li>
 			<br>
@@ -48,5 +48,23 @@ rewrite list to turn into an "about" page
 		</ul>
 	</div>
 </div>
+
+<!-- about me/ bio -->
+
+<!-- about hackbright/ the project/ technology used -->
+
+<!-- thanks to mentors, advisor, teachers, TAs -->
+
+<!-- thanks to friends and family -->
+
+<!-- credit to artists of images used? -->
+
+<!-- credit to the API -->
+<div class = "msw">
+    <a href="http://magicseaweed.com"><img src="http://im-1-uk.msw.ms/msw_powered_by.png"></a>
+    <br>
+    <h5 class = "msw">Surf condtion data from magicseaweed.com</h5> 
+</div>
+
 
 {% endblock %}
