--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
     <head>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
