--- a/templates/board_quiver.html
+++ b/templates/board_quiver.html
@@ -42,7 +42,7 @@
      -->
         <h3>Add a Board to your Quiver:</h3>
         Board's nickname:<br>
-            <input type="text" name = "nickname" required>
+            <input type="text" name = "nickname" required placeholder="(name your board!)">
         <br>
     <!--
         how to provide a set list to feed into dropdown?
@@ -62,16 +62,16 @@
         <br>
         <!-- length: make input boxes smaller or convert to dropdowns? -->
         Length:<br>
-            <input type="text" name = "length_ft" size = "5" >feet <input type="text" name = "length_in" size = "5">inches
+            <input type="text" name = "length_ft" size = "5" placeholder="#">feet <input type="text" name = "length_in" size = "5" placeholder="#">inches
         <br>
         Shaper:<br>
-            <input type="text" name = "shaper">
+            <input type="text" name = "shaper" placeholder="(Shaper's Name)">
         <br>
         Model or Description:<br>
-            <input type="text" name = "shape" required>
+            <input type="text" name = "shape" required placeholder="(Superfish, custom..?)">
         <br>
         Fin Setup:<br>
-            <input type="text" name = "fins" placeholder="(eg: 2+1, singlefin, thruster)">      
+            <input type="text" name = "fins" placeholder="(2+1, singlefin..?)">      
         <br>
         <br>
         <input type="submit" value = "Add Board to your Quiver">
